--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./styles/style.css">
 
     <script src="js/Message.js"></script>
+    <script src="js/DualMessage.js"></script>
+    <script src="js/RatingHint.js"></script>
     <script src="js/ChatService.js"></script>
     <script src="js/UIService.js"></script>
 
@@ -24,48 +26,16 @@
                     <div class="icon"></div>
                         <div class="message-content">
                             <div class="name">Bot</div>
-                            <p>Hallo! Wie kann ich dir in den Themen Gesundheitsinformatik, Telemedizin und dem deutschen Gesundheitswesen behilflich sein? </p>
+                            <p class="text">Hallo! Wie kann ich dir in den Themen Gesundheitsinformatik, Telemedizin und dem deutschen Gesundheitswesen behilflich sein? </p>
                         </div>
                 </div>
-            <div class="user-message message">
-                <div class="icon">
-                </div>
-                <div class="message-content">
-                    <div class="name">You</div>
-                    <p>Hi! I am a user.
-                        <br> I want to know about the courses offered by the university.</p>
-                </div>
-            </div>
-            <div class="duo-message">
 
-            <div class="ai-message message">
-                <div class="icon">
-                </div>
-                <div class="message-content">
-                    <div class="name">Bot</div>
-                    <p>Great! We offer a wide range of courses. You can find more information about them on our website.</p>
-                </div>
-            </div>
-                <div class="ai-message message">
-                    <div class="icon">
-
-                    </div>
-                    <div class="message-content">
-                        <div class="name">Bot</div>
-                        <p>Gesundheitsinformatik bezieht sich auf die Anwendung von Informationstechnologie im Gesundheitswesen, um die Effizienz, Qualität und Sicherheit der Gesundheitsversorgung zu verbessern. Dies umfasst die Verwendung von elektronischen Gesundheitsakten, Gesundheitsinformationsaustausch, Telemedizin, Gesundheits-Apps und anderen digitalen Tools, um Gesundheitsdaten zu verwalten, zu analysieren und auszutauschen. Die Gesundheitsinformatik spielt eine wichtige Rolle bei der Unterstützung von klinischen Entscheidungen, der Verbesserung der Patientensicherheit, der Effizienz von Gesundheitseinrichtungen und der Förderung der Forschung im Gesundheitswesen.</p>
-
-                    </div>
-                </div>
-            </div>
-            <div class="rating-hint">
-                <p>Welche Antwort gefällt dir besser? Clicke auf deine bevorzugte Antwort</p>
-            </div>
         </div>
         <div id="anchor"></div>
     </div>
     <div class="input-container">
         <input type="text" id="input" class="input" placeholder="Type a message...">
-        <button id="send" class="send"><img src="pictures/send.svg" onclick=""></button>
+        <button id="send" class="send"><img src="pictures/send.svg"></button>
     </div>
 </div>
 </body>
@@ -75,15 +45,16 @@
     const input = document.getElementById('input');
     const send = document.getElementById('send');
     const clear = document.getElementById('clear');
+    const ratingHint = new RatingHint();
 
     send.addEventListener('click', function() {
-        chatService.getAnswer(input.value);
+        chatService.getDualAnswer(input.value);
         input.value = '';
     });
 
     input.addEventListener('keyup', function(event) {
         if (event.key === 'Enter') {
-            chatService.getAnswer(input.value);
+            chatService.getDualAnswer(input.value,ratingHint);
             input.value = '';
         }
     });
