Welches Modell auf welcher Seite und mit RAG o. ohne jz in application.properties config. bar

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -38,6 +38,9 @@
         <input type="text" id="input" class="input" placeholder="Type a message...">
         <button id="send" class="send"><img src="pictures/send.svg"></button>
     </div>
+    <div class="hint-bottom">
+        <p>Der Chat geht nach dem Neuladen der Seite verloren!</p>
+    </div>
 </div>
 </body>
 <script>
