--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -52,15 +52,20 @@
     const ratingHint = new RatingHint();
 
     send.addEventListener('click', function() {
-        chatService.getDualAnswer(input.value);
-        input.value = '';
-    });
+        if (input.value === ''){
 
-    input.addEventListener('keyup', function(event) {
-        if (event.key === 'Enter') {
+        } else{
             chatService.getDualAnswer(input.value,ratingHint);
             input.value = '';
         }
+    });
+
+    input.addEventListener('keyup', function(event) {
+        if(input.value !== ''){
+        if (event.key === 'Enter') {
+            chatService.getDualAnswer(input.value,ratingHint);
+            input.value = '';
+        }}
     });
 
     clear.addEventListener('click', function() {
