--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -12,6 +12,7 @@
     <script src="js/RatingHint.js"></script>
     <script src="js/ChatService.js"></script>
     <script src="js/UIService.js"></script>
+    <script src="js/RatingService.js"></script>
 
 </head>
 <body>
