--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -44,6 +44,7 @@
     </div>
     <div class="input-container">
         <input type="text" id="input" class="input" placeholder="Type a message...">
+        <div class="popup" id="popup">Bitte gebe eine Bewertung ab!</div>
         <button id="send" class="send"><img src="pictures/send.svg"></button>
     </div>
     <div class="hint-bottom">
@@ -86,6 +87,10 @@
     document.getElementById('darkmode').addEventListener('click', function() {
         uiService.toggleDarkMode();
     });
+
+    uiService.enablePopUp();
+
+
 
 
 </script>
