--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -11,6 +11,7 @@
     <script src="js/Message.js"></script>
     <script src="js/DualMessage.js"></script>
     <script src="js/ErrorMessage.js"></script>
+    <script src="js/LoadingMessage.js"></script>
     <script src="js/RatingHint.js"></script>
     <script src="js/ChatService.js"></script>
     <script src="js/UIService.js"></script>
