--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>thesis-chatbot - 1.0-SNAPSHOT</title>
+    <title>thesis-chatbot</title>
+
+    <link rel="icon" type="image/x-icon" href="/pictures/Chatbot_Logo.webp">
 
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/darkmode.css">
