--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -47,6 +47,7 @@
         <div id="anchor"></div>
     </div>
     <div class="input-container">
+        <label for="input"></label>
         <input type="text" id="input" class="input" placeholder="Type a message...">
         <div class="popup" id="popup">Bitte gebe eine Bewertung ab!</div>
         <button id="send" class="send"><img src="pictures/send.svg"></button>
