--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -50,7 +50,7 @@
         <label for="input"></label>
         <input type="text" id="input" class="input" placeholder="Type a message...">
         <div class="popup" id="popup">Bitte gebe eine Bewertung ab!</div>
-        <button id="send" class="send"><img src="pictures/send.svg"></button>
+        <button id="send" class="send"><img src="pictures/send.svg" alt="absenden"></button>
     </div>
     <div class="hint-bottom">
         <p>Der Chat geht nach dem Neuladen der Seite verloren!</p>
