bug in Bewertungs-UI entfernt

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -19,6 +19,7 @@
     <script src="js/UIService.js"></script>
     <script src="js/RatingService.js"></script>
     <script src="js/MarkdownParser.js"></script>
+<script src="js/RatingExtended.js"></script>
 
 </head>
 <body>
