designanpassungen + summarizer model geändert

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -49,7 +49,7 @@
     </div>
     <div id="suggestions">
         <div class="suggestion" id="suggestion1">Was ist Gesundheitsinformatik?</div>
-        <div class="suggestion" id="suggestion2">Was ist Telemedizin?</div>
+        <div class="suggestion" id="suggestion2">Welche Aufgaben haben Zentriolen und welche Aufgaben haben die Mikrotubuli im Rahmen der Mitose und Meiose der menschlichen Zelle?</div>
         <div class="suggestion" id="suggestion3">Wie funktioniert das deutsche Gesundheitswesen?</div>
         <div class="suggestion" id="suggestion4">Was ist die Krankenhausreform 2023?</div>
     </div>
