--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -5,154 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>thesis-chatbot</title>
 
+    <link rel="stylesheet" type="text/css" href="./styles/IndexStyle.css">
     <link rel="icon" type="image/x-icon" href="/pictures/Chatbot_Logo.webp">
-
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/darkmode.css">
-
-    <script src="js/Message.js"></script>
-    <script src="js/DualMessage.js"></script>
-    <script src="js/ErrorMessage.js"></script>
-    <script src="js/LoadingMessage.js"></script>
-    <script src="js/RatingHint.js"></script>
-    <script src="js/ChatService.js"></script>
-    <script src="js/UIService.js"></script>
-    <script src="js/RatingService.js"></script>
-    <script src="js/MarkdownParser.js"></script>
-<script src="js/RatingExtended.js"></script>
 
 </head>
 <body>
-<div class="chat-container">
-    <div class="tool-container">
-        <button class="tool" id="clear">Clear</button>
-        <div class="tool-text-img-box">
-            <div>Theme:</div>
-            <button class="tool" id="darkmode"><img src="pictures/darkmode.svg" width="24px" height="20px"></button>
+<div class="start-container">
+    <h1>Hallo! Bitte wähle einen Modus aus:</h1>
+    <div class="auswahl-container">
+        <div>
+            <button class="auswahl-button" onclick="window.location.href='/chat'">Chatbot</button>
         </div>
-
-
-    </div>
-    <div class="conversation-container" id="scroller">
-
-        <div id="conversation">
-            <div class="ai-message message">
-                    <div class="icon"></div>
-                        <div class="message-content">
-                            <div class="name">Bot</div>
-                            <p class="text">Hallo! Wie kann ich dir in den Themen Gesundheitsinformatik, Telemedizin und dem deutschen Gesundheitswesen behilflich sein? </p>
-                        </div>
-                </div>
-
+        <div>
+            <button class="auswahl-button" onclick="window.location.href='/multipleChoice'">Lernen mit Multiple Choice</button>
         </div>
-        <div id="anchor"></div>
-    </div>
-    <div id="suggestions">
-        <div class="suggestion" id="suggestion1">Erkläre kurz was Gesundheitsinformatik ist, welche Vorteile ein Studium in dem Bereich hat und wo man es studieren kann.</div>
-        <div class="suggestion" id="suggestion2">Welche Aufgaben haben Zentriolen und welche Aufgaben haben die Mikrotubuli im Rahmen der Mitose und Meiose der menschlichen Zelle?</div>
-        <div class="suggestion" id="suggestion3">Wie funktioniert das deutsche Gesundheitswesen?</div>
-        <div class="suggestion" id="suggestion4">Was ist die Krankenhausreform 2023?</div>
-    </div>
-    <div class="input-container">
-        <label for="input"></label>
-        <textarea rows="1" id="input" class="input" placeholder="Frage mich etwas..."></textarea>
-        <div class="popup" id="popup">Bitte gebe eine Bewertung ab!</div>
-        <button id="send" class="send"><img src="pictures/send.svg" alt="absenden"></button>
-    </div>
-    <div class="hint-bottom">
-        <p>Der Chat geht nach dem Neuladen der Seite verloren!</p>
     </div>
 </div>
 </body>
-<script>
-
-
-
-    const chatService = new ChatService();
-
-    const input = document.getElementById('input');
-    const send = document.getElementById('send');
-    const clear = document.getElementById('clear');
-    const ratingHint = new RatingHint();
-    const uiService = new UIService();
-
-    window.onload = function() {
-        uiService.loadDarkMode();
-    };
-
-    // Verhindert XSS
-    function sanitizeString(str) {
-        return str.replace(/&/g, "&amp;")
-            .replace(/</g, "&lt;")
-            .replace(/>/g, "&gt;")
-            .replace(/"/g, "&quot;")
-            .replace(/'/g, "&#39;")
-            .replace(/`/g, "&#96;");
-    }
-
-    // Eventlistener für das Absenden einer Nachricht bei Click auf Button
-    send.addEventListener('click', function() {
-        if (input.value === ''){
-
-        } else{
-            input.disabled = true;
-            document.getElementById('suggestions').style.display = 'none';
-            let inputText = sanitizeString(input.value);
-            chatService.getDualAnswer(inputText,ratingHint);
-            input.value = '';
-            document.getElementById("scroller").scrollTo(0, document.getElementById("scroller").scrollHeight);
-        }
-    });
-
-    // Eventlistener für das Absenden einer Nachricht bei Enter
-    input.addEventListener('keyup', function(event) {
-        if(input.value !== ''){
-            if(event.key === 'Enter' && event.shiftKey){
-                input.value += '\n';
-            }
-        else if (event.key === 'Enter' && !event.shiftKey) {
-            input.disabled = true;
-            document.getElementById('suggestions').style.display = 'none';
-            let inputText = sanitizeString(input.value);
-            chatService.getDualAnswer(inputText,ratingHint);
-            input.value = '';
-            input.style.height = 'auto';
-            document.getElementById("scroller").scrollTo(0, document.getElementById("scroller").scrollHeight);
-        }}
-    });
-
-    // Eventlistener für das Löschen des Chats
-    clear.addEventListener('click', function() {
-        chatService.clearMessages();
-        document.getElementById('suggestions').style.display = 'grid';
-    });
-
-    // Eventlistener für das Wechseln des Themes
-    document.getElementById('darkmode').addEventListener('click', function() {
-        uiService.toggleDarkMode();
-        uiService.saveDarkMode();
-    });
-
-    uiService.enablePopUp();
-
-    // Eventlistener für die Vorschläge
-    const suggestions = document.getElementsByClassName('suggestion');
-    for (const suggestion of suggestions) {
-        suggestion.addEventListener('click', function() {
-            input.disabled = true;
-            chatService.getDualAnswer(suggestion.textContent,ratingHint);
-            document.getElementById('input').value = '';
-            document.getElementById('suggestions').style.display = 'none';
-        });
-    }
-
-    // Eventlistener für das automatische Anpassen des Inputfeldes
-    input.addEventListener('input', function() {
-        input.style.height = 'auto';
-        input.style.height = (input.scrollHeight) + 'px';
-        input.style.maxHeight = '300px';
-    });
-
-
-</script>
 </html>
